# TRServers

./: CMakeLists.txt  README.md  TODO_LIST.txt  install_and_compile  out_tr_build.sh  test_build.sh
game_servers/: CMakeLists.txt
game_servers/center_server/: CMakeLists.txt  center_global.cpp  center_global.h  center_player.cpp  center_player.h  center_server.cpp  center_server.h  center_table_service.cpp  center_table_service.h  center_timers.cpp  center_timers.h  main.cpp
game_servers/center_server/msg_handlers/: center_frame_handle.cpp  center_frame_handle.h  center_login_handle.cpp  center_login_handle.h  center_reg_msg_handle.cpp
game_servers/common_base/: common_base.txt
game_servers/common_base/config_data/: config_opration.cpp  config_opration.h
game_servers/common_base/data_tables/: data_table_base.cpp  data_table_base.h  tb_role_base.cpp  tb_role_base.h
game_servers/data_server/: CMakeLists.txt  data_global.cpp  data_global.h  data_player.cpp  data_player.h  data_server.cpp  data_server.h  data_table_service.cpp  data_table_service.h  db_stmt_interface.h  main.cpp
game_servers/data_server/msg_handlers/: data_frame_handle.cpp  data_frame_handle.h  data_login_handle.cpp  data_login_handle.h  data_reg_msg_handle.cpp
game_servers/database_tools/: data_pb_tools.cpp  data_pb_tools.h  database_hash.cpp  database_hash.h  database_interface.h
game_servers/gate_server/: CMakeLists.txt  gate_global.cpp  gate_global.h  gate_server.cpp  gate_server.h  main.cpp
game_servers/gate_server/msg_handlers/: gate_frame_handle.cpp  gate_frame_handle.h  gate_login_handle.cpp  gate_login_handle.h  gate_reg_msg_handle.cpp
game_servers/logic_center_server/: CMakeLists.txt  logic_center_server.cpp  logic_center_server.h  main.cpp
game_servers/logic_center_server/msg_handlers/: logic_cs_frame_handle.cpp  logic_cs_frame_handle.h  logic_cs_reg_msg_handle.cpp
game_servers/logic_server/: CMakeLists.txt  logic_global.cpp  logic_global.h  logic_player.cpp  logic_player.h  logic_server.cpp  logic_server.h  logic_table_service.cpp  logic_table_service.h  logic_timers.cpp  logic_timers.h  main.cpp
game_servers/logic_server/func_wrappers/: logic_login_wrapper.cpp  logic_login_wrapper.h
game_servers/logic_server/msg_handlers/: logic_frame_handle.cpp  logic_frame_handle.h  logic_login_handle.cpp  logic_login_handle.h  logic_reg_msg_handle.cpp
game_servers/login_server/: CMakeLists.txt  login_global.cpp  login_global.h  login_server.cpp  login_server.h  main.cpp
game_servers/login_server/msg_handlers/: login_account_handle.cpp  login_account_handle.h  login_frame_handle.cpp  login_frame_handle.h  login_reg_msg_handle.cpp
game_servers/pb_protos/: data_pb_common.proto  protcl_common.proto  protcl_frame.proto  protcl_login.proto
game_servers/pb_pyfiles/: protcl_login_pb2.py
game_servers/pb_srcfiles/: data_pb_common.pb.cc  data_pb_common.pb.h  protcl_common.pb.cc  protcl_common.pb.h  protcl_frame.pb.cc  protcl_frame.pb.h  protcl_login.pb.cc  protcl_login.pb.h
game_servers/protocols/: protocol_class.h  protocol_error_code.h  protocol_frame.h  protocol_login.h
game_servers/protocols/work_protocols/: README.md  wk_protocol_00001_test.h  wk_protocol_base.h  wk_protocol_note.md
game_servers/root_server/: CMakeLists.txt  main.cpp  root_global.cpp  root_global.h  root_server.cpp  root_server.h
game_servers/root_server/msg_handlers/: root_frame_handle.cpp  root_frame_handle.h  root_login_handle.cpp  root_login_handle.h  root_reg_msg_handle.cpp
game_servers/server_common/: client_net_node.cpp  client_net_node.h  game_config.cpp  game_config.h  game_msg_helper.cpp  game_msg_helper.h  game_server.cpp  game_server.h  launch_wait_event.h  server_config.cpp  server_config.h  server_define.h  server_describe.cpp  server_describe.h  server_info_manager.cpp  server_info_manager.h  server_session.cpp  server_session.h
game_servers/tr_scripts/: tr_bootup_server.sh  tr_clear_log.sh  tr_close.py  tr_close_server.sh  tr_gen_proto.sh  tr_gen_pyprot.sh  tr_info.sh  tr_start_server.py
game_servers/view_manager_server/: CMakeLists.txt  main.cpp  view_manager_server.cpp  view_manager_server.h
game_servers/view_manager_server/msg_handlers/: view_manager_frame_handle.cpp  view_manager_frame_handle.h  view_manager_reg_msg_handle.cpp
game_servers/view_server/: CMakeLists.txt  main.cpp  view_server.cpp  view_server.h
game_servers/view_server/msg_handlers/: view_frame_handle.cpp  view_frame_handle.h  view_reg_msg_handle.cpp
game_servers/world_server/: CMakeLists.txt  main.cpp  world_server.cpp  world_server.h
game_servers/world_server/msg_handlers/: world_frame_handle.cpp  world_frame_handle.h  world_reg_msg_handler.cpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  test.pb.cc  test.pb.h
test_case/: CMakeLists.txt
test_case/database_sql/: CMakeLists.txt  main.cpp
test_case/echo_client/: CMakeLists.txt  main.cpp
test_case/echo_server/: CMakeLists.txt  main.cpp
test_case/sample_msg_client/: CMakeLists.txt  main.cpp
test_case/sample_msg_server/: CMakeLists.txt  main.cpp
third_libs/: libs_require.txt
third_libs/mysql_include/jdbc/cppconn/: version_info.h
tr_common/: base_type_def.h  common_define.h  func_tools.cpp  func_tools.h  obj_pool.h  singleton.h
tr_database/: data_table_item.cpp  data_table_item.h  database_helper.cpp  database_helper.h
tr_log/: log_module.h
tr_msg_packet/: msg_dispacher.cpp  msg_dispacher.h  msg_dispatcher.cpp  msg_dispatcher.h  msg_handler.cpp  msg_handler.h  msg_pool.cpp  msg_pool.h  msg_queue.cpp  msg_queue.h  msg_tools.cpp  msg_tools.h  net_message.cpp  net_message.h  server_buffer.cpp  server_buffer.h
tr_network/: base_server.cpp  base_server.h  connect_manager.cpp  connect_manager.h  cycle_buffer.h  net_common.h  net_connection.cpp  net_connection.h  net_epoll.cpp  net_epoll.h  net_socket.cpp  net_socket.h
tr_timer/: global_timer.cpp  global_timer.h  server_time.cpp  server_time.h  time_wheel.cpp  time_wheel.h  wheel_timer.cpp  wheel_timer.h
