CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(TRServers)

SET(CLANG_DIR "/data/clang_5_0_0/bin")
SET(CMAKE_CXX_FLAGS "-g -Wall -std=c++14")
#SET(CMAKE_SYSTEM_NAME Linux)

#SET (CMAKE_C_COMPILER             "${CLANG_DIR}/clang")
#SET (CMAKE_C_FLAGS                "-Wall -std=c99")
#SET (CMAKE_C_FLAGS_DEBUG          "-g")
#SET (CMAKE_C_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
#SET (CMAKE_C_FLAGS_RELEASE        "-O4 -DNDEBUG")
#SET (CMAKE_C_FLAGS_RELWITHDEBINFO "-O2 -g")

#SET(CMAKE_CXX_COMPILER "${CLANG_DIR}/clang++")
#SET (CMAKE_CXX_FLAGS                "-Wall -std=c++11")
#SET (CMAKE_CXX_FLAGS_DEBUG          "-g")
#SET (CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
#SET (CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG")
#SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
#SET (CMAKE_AR      "${CLANG_DIR}/llvm-ar")
#SET (CMAKE_LINKER  "${CLANG_DIR}/llvm-ld")
#SET (CMAKE_NM      "${CLANG_DIR}/llvm-nm")
#SET (CMAKE_OBJDUMP "${CLANG_DIR}/llvm-objdump")
#SET (CMAKE_RANLIB  "${CLANG_DIR}/llvm-ranlib")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

#包含路径

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/tr_timer})

ADD_SUBDIRECTORY(test)
