CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(game_servers)

MESSAGE("game_servers PROJECT_SOURCE_DIR:${PROJECT_SOURCE_DIR}")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/protocols)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/pb_protos)

# 公用的源文件
FILE(GLOB SERVER_COMMON_SRC ${PROJECT_SOURCE_DIR}/server_common/*.cpp)

ADD_SUBDIRECTORY(login_server)
ADD_SUBDIRECTORY(root_server)
ADD_SUBDIRECTORY(center_server)
ADD_SUBDIRECTORY(data_server)
ADD_SUBDIRECTORY(logic_server)
ADD_SUBDIRECTORY(gate_server)
