CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(game_servers)

MESSAGE("game_servers PROJECT_SOURCE_DIR:${PROJECT_SOURCE_DIR}")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/protocols)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/pb_srcfiles)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/pb_protos)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/database_tools)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/data_tables)
# 公用的源文件
FILE(GLOB SERVER_COMMON_SRC ${PROJECT_SOURCE_DIR}/server_common/*.cpp)
FILE(GLOB SERVER_PB_SRC ${PROJECT_SOURCE_DIR}/pb_srcfiles/*.cc)
FILE(GLOB SERVER_DB_TOOLS_SRC ${PROJECT_SOURCE_DIR}/database_tools/*.cpp)
FILE(GLOB SERVER_DATA_TABLES_SRC ${PROJECT_SOURCE_DIR}/data_tables/*.cpp)

ADD_SUBDIRECTORY(login_server)
ADD_SUBDIRECTORY(root_server)
ADD_SUBDIRECTORY(center_server)
ADD_SUBDIRECTORY(data_server)
ADD_SUBDIRECTORY(logic_server)
ADD_SUBDIRECTORY(gate_server)
