CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(test)

FILE(GLOB MAIN_SRC ${PROJECT_SOURCE_DIR}/*.cpp)
FILE(GLOB MAIN_PROTO_SRC ${PROJECT_SOURCE_DIR}/*.cc)

MESSAGE("PROJECT_SOURCE_DIR:${PROJECT_SOURCE_DIR}")
#ADD_EXECUTABLE(test_exe ${TIMER_SRC} ${MAIN_SRC} ${COMMON_SRC}
#${NETWORK_SRC} ${LOG_SRC} ${MSG_PACKET_SRC} ${THIRD_JSONCPP_SRC})

ADD_EXECUTABLE(test_exe ${TOP_COMMON_SRC} ${MAIN_SRC} ${MAIN_PROTO_SRC})

#链接库文件
TARGET_LINK_LIBRARIES(test_exe libmysqlcppconn.so libprotobuf.so liblog4cplus.so)