CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(cener_server)

FILE(GLOB MAIN_SRC ${PROJECT_SOURCE_DIR}/*.cpp)

MESSAGE("CENTER_SERVER_PROJECT_SOURCE_DIR:${PROJECT_SOURCE_DIR}")

#ADD_EXECUTABLE(center_server ${TIMER_SRC} ${MAIN_SRC} ${COMMON_SRC}
#${NETWORK_SRC} ${LOG_SRC} ${MSG_PACKET_SRC} ${SERVER_COMMON_SRC}
#${THIRD_JSONCPP_SRC})

ADD_EXECUTABLE(center_server ${TOP_COMMON_SRC} ${SERVER_COMMON_SRC} ${MAIN_SRC})

#链接库文件
TARGET_LINK_LIBRARIES(center_server liblog4cplus.so)
