CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(data_server)

FILE(GLOB MAIN_SRC ${PROJECT_SOURCE_DIR}/*.cpp)
FILE(GLOB MSG_HANDLE_SRC ${PROJECT_SOURCE_DIR}/msg_handlers/*.cpp)
FILE(GLOB COMMONBASE_DATA_TB_SRC ${PROJECT_SOURCE_DIR}/../common_base/data_tables/*.cpp)
MESSAGE("DATA_SERVER_PROJECT_SOURCE_DIR:${PROJECT_SOURCE_DIR}")

#ADD_EXECUTABLE(data_server ${TIMER_SRC} ${MAIN_SRC} ${COMMON_SRC}
#${NETWORK_SRC} ${LOG_SRC} ${MSG_PACKET_SRC} ${SERVER_COMMON_SRC}
#${THIRD_JSONCPP_SRC})

ADD_EXECUTABLE(data_server ${TOP_COMMON_SRC} ${SERVER_COMMON_SRC} ${MAIN_SRC} ${SERVER_PB_SRC} ${MSG_HANDLE_SRC} 
${SERVER_DB_SRC} ${COMMONBASE_DATA_TB_SRC} ${SERVER_DB_TOOLS_SRC})

#链接库文件
TARGET_LINK_LIBRARIES(data_server libpthread.so liblog4cplus.so libprotobuf.so libmysqlcppconn.so)
