CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(logic_server)

FILE(GLOB MAIN_SRC ${PROJECT_SOURCE_DIR}/*.cpp)
FILE(GLOB MSG_HANDLE_SRC ${PROJECT_SOURCE_DIR}/msg_handlers/*.cpp)
FILE(GLOB COMMONBASE_DATA_TB_SRC ${PROJECT_SOURCE_DIR}/../common_base/data_tables/*.cpp)
FILE(GLOB FUNC_WRAPPER_SRC ${PROJECT_SOURCE_DIR}/func_wrappers/*.cpp)
FILE(GLOB FUNC_HANDLER_SRC ${PROJECT_SOURCE_DIR}/func_handlers/*.cpp)
MESSAGE("LOGIC_SERVER_PROJECT_SOURCE_DIR:${PROJECT_SOURCE_DIR}")

#ADD_EXECUTABLE(login_server ${TIMER_SRC} ${MAIN_SRC} ${COMMON_SRC}
#${NETWORK_SRC} ${LOG_SRC} ${MSG_PACKET_SRC} ${SERVER_COMMON_SRC}
#${THIRD_JSONCPP_SRC})

ADD_EXECUTABLE(logic_server ${TOP_COMMON_SRC} ${SERVER_COMMON_SRC} ${MAIN_SRC} ${SERVER_PB_SRC} 
${SERVER_DB_SRC} ${SERVER_DB_TOOLS_SRC} ${MSG_HANDLE_SRC} ${COMMONBASE_DATA_TB_SRC} 
${FUNC_HANDLER_SRC} ${FUNC_WRAPPER_SRC} ${CONFIG_DATA_SRC})

#链接库文件
TARGET_LINK_LIBRARIES(logic_server libpthread.so liblog4cplus.so libprotobuf.so libmysqlcppconn.so)
