CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(login_server)

FILE(GLOB MAIN_SRC ${PROJECT_SOURCE_DIR}/*.cpp)
FILE(GLOB MSG_HANDLE_SRC ${PROJECT_SOURCE_DIR}/msg_handlers/*.cpp)


MESSAGE("LOGIN_SERVER_PROJECT_SOURCE_DIR:${PROJECT_SOURCE_DIR}")

#ADD_EXECUTABLE(login_server ${TIMER_SRC} ${MAIN_SRC} ${COMMON_SRC}
#${NETWORK_SRC} ${LOG_SRC} ${MSG_PACKET_SRC} ${SERVER_COMMON_SRC}
#${THIRD_JSONCPP_SRC})

ADD_EXECUTABLE(login_server ${TOP_COMMON_SRC} ${SERVER_COMMON_SRC} ${MAIN_SRC} ${MSG_HANDLE_SRC} ${SERVER_PB_SRC} ${SERVER_DB_SRC}
${SERVER_DB_TOOLS_SRC} ${SERVER_DATA_TABLES})

#链接库文件
TARGET_LINK_LIBRARIES(login_server libpthread.so liblog4cplus.so libprotobuf.so libmysqlcppconn.so)
