CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(view_server)

FILE(GLOB MAIN_SRC ${PROJECT_SOURCE_DIR}/*.cpp)
FILE(GLOB MSG_HANDLE_SRC ${PROJECT_SOURCE_DIR}/msg_handlers/*.cpp)
#FILE(GLOB COMMONBASE_DATA_TB_SRC ${PROJECT_SOURCE_DIR}/../common_base/data_tables/*.cpp)
#FILE(GLOB FUNC_WRAPPER_SRC ${PROJECT_SOURCE_DIR}/func_wrappers/*.cpp)
FILE(GLOB FUNC_HANDLER_SRC ${PROJECT_SOURCE_DIR}/func_handlers/*.cpp)
MESSAGE("VIEW_MANAGER_SERVER_PROJECT_SOURCE_DIR:${PROJECT_SOURCE_DIR}")

ADD_EXECUTABLE(view_server ${TOP_COMMON_SRC} ${SERVER_COMMON_SRC} ${MAIN_SRC} ${SERVER_PB_SRC} 
${MSG_HANDLE_SRC} ${FUNC_HANDLER_SRC})

#链接库文件
TARGET_LINK_LIBRARIES(view_server libpthread.so liblog4cplus.so libprotobuf.so)
