CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(database_sql)

FILE(GLOB MAIN_SRC ${PROJECT_SOURCE_DIR}/*.cpp)
FILE(GLOB TEST_PB_SRC ${PROJECT_SOURCE_DIR}/*.cc)

MESSAGE("PROJECT_SOURCE_DIR:${PROJECT_SOURCE_DIR}")

ADD_EXECUTABLE(database_sql_exe ${TOP_COMMON_SRC} ${MAIN_SRC} ${MAIN_PROTO_SRC} ${SERVER_DB_SRC} ${TEST_PB_SRC})
#链接库文件
TARGET_LINK_LIBRARIES(database_sql_exe liblog4cplus.so libmysqlcppconn.so libprotobuf.so)
