CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(echo_client)

FILE(GLOB MAIN_SRC ${PROJECT_SOURCE_DIR}/*.cpp)

MESSAGE("PROJECT_SOURCE_DIR:${PROJECT_SOURCE_DIR}")
ADD_EXECUTABLE(echo_client ${TIMER_SRC} ${MAIN_SRC} ${COMMON_SRC}
${NETWORK_SRC} ${LOG_SRC})

#链接库文件
TARGET_LINK_LIBRARIES(echo_client liblog4cplus.so)